--- a/reference/Test-API.yaml
+++ b/reference/Test-API.yaml
@@ -131,11 +131,16 @@ paths:
                 dateOfBirth:
                   type: string
                   format: date
+                country:
+                  type: string
+                  x-stoplight:
+                    id: 0eo1w7nimxbhq
               required:
                 - firstName
                 - lastName
                 - email
                 - dateOfBirth
+                - country
             examples:
               Create User Bob Fellow:
                 value:
@@ -150,7 +155,6 @@ components:
     User:
       title: User
       type: object
-      description: ''
       examples:
         - id: 142
           firstName: Alice
@@ -174,6 +178,10 @@ components:
           type: string
           format: date
           example: '1997-10-31'
+        country:
+          type: string
+          x-stoplight:
+            id: uryqudn9v59xg
         emailVerified:
           type: boolean
           description: Set to true if the user's email has been verified.
@@ -186,4 +194,5 @@ components:
         - firstName
         - lastName
         - email
+        - country
         - emailVerified
